# RoboMasterClientWMJ

./: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CHANGES.md  DevelopmentFramework.md  IMPLEMENTATION_SUMMARY.md  MiniJSON.csproj  NATIVE_VIDEO_PLAN.md  Project.Editor.csproj  README.md  RoboMasterClientWMJ.slnx  UDP图传架构.md  UI.RobotSelection.Editor.csproj  build.sh  check_nvidia.sh  final_fix.sh  fix_resolved.sh  monitor_performance.sh  switch_gpu_mode.sh  switch_real_gpu.sh  typescript  优化图传开发问题记录.md  自定义数据传输协议.md
Assets/: Investigations.md  MainScene.unity  packages.config
Assets/Dependencies/: MiniJSON.asmdef
Assets/Diagnostics/: investigate.sh
Assets/Documentation/: CustomVideoProtocol.md  VideoStreamDiagnostics.md  VideoStreamTroubleshootingQuickStart.md
Assets/Editor/: BuildScript.cs  DebugLogController.cs  Editor.asmdef  FontSdfGenerator.cs  LogViewerWindows.cs  ParamsManagerWindow.cs
Assets/MockServerCpp/: CMakeLists.txt  README.md  clean_logs.sh  diagnose_and_start.sh  log_monitor.h  start_mock.sh  stop_mock.sh
Assets/MockServerCpp/qtgui/: CMakeLists.txt  main_with_thread.cpp  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
Assets/MockServerCpp/run/: .gitignore  .unityignore  README.txt  cleanup_logs.sh  mosquitto_mock.conf  pids.env  pids.json
Assets/MockServerCpp/src/: event_types.h  game_simulator.cpp  game_simulator.h  main.cpp  protocol.cpp  protocol.h  server_to_client_types.h  video_sender.cpp  video_sender.h
Assets/Plugins/NativeVideoPlugin/: .gitignore  CMakeLists.txt  NV12ToRGB.cu  NativeVideoPlugin.cpp  NvdecStub.cpp  NvdecStub.h  README.md  SDK_INSTALLATION_COMPLETE.md  SDK_INSTALL_GUIDE.md  TESTING.md  TROUBLESHOOTING_VIDEO.md  UdpFrameAssembler.cpp  UdpFrameAssembler.h  VIDEO_STATUS_DIAGNOSIS.md  VulkanInterop.cpp  VulkanInterop.h  build.sh
Assets/Plugins/NativeVideoPlugin/include/: nvcuvid.h
Assets/Proto/: RoboMasterClientMessage.proto
Assets/Resources/Fonts/: ChineseFont SDF.asset
Assets/Resources/Models/: lobshot_sr.onnx
Assets/Scripts/Config/: GameParamsConfig.cs
Assets/Scripts/Plugins/: NativeVideoBridge.cs
Assets/Scripts/Services/: AmmoPurchaseInputService.cs  AutoResupplyService.cs  KeyboardMouseInputService.cs  SimulationInputService.cs
Assets/Scripts/UI/: UIManager.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/StreamingAssets/Config/: game_params.json  params.json  params_lowspec.json  params_midspec.json  quick_reference.json  ui_layout.json
Assets/StreamingAssets/Models/: lobshot_sr.onnx.data
Assets/Utils/: ConfigData.cs  ConfigLoader.cs  DebugLog.cs  DebugTools.cs  Log.cs  LogBridge.cs
Assets/Utils/Editor/: DebugLogController.cs
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
tools/: .release.env.example  download_ffmpeg.sh  md_to_latex_pdf.py  nginx_robomaster.conf  publish_http.sh
tools/release_launcher/: download.html  install.html  launch.bat  launch.sh
文档/: GC优化架构文档.md  Intel集显低配测试报告.md  NVDEC_SDK安装指南.md  RoboMaster 2026 机甲大师超级对抗赛比赛规则.md  RoboMaster 2026 机甲大师高校系列赛通信协议 V1.2.0（20260209）.md  RoboMaster 2026 机甲大师高校系列赛通信协议 V1.3.0 (20260326).md  UDP图传架构.md  WMJ视觉吊射方案技术文档.md  优化图传开发问题记录.md  原生视频插件开发文档.md  原生视频插件开发计划.md  图传故障排查指南.md  自定义客户端配置与模式使用指南.md  自定义数据传输协议.md  视觉吊射方案.md  项目框架.md  项目阅读指南.md
测试报告/: Intel集显低配测试报告_20260209.md  性能采集_20260209_165916_gpu.csv  性能采集_20260209_165916_system.csv
运行反馈/: RunLog (1).txt
(+157 files in other folders)
